# CMake_Template

./: CMakeLists.txt  README.md
src/: main.cpp
